Adapt to build with JDK 17